# package_example

./: README.md
simple_cpp_project/: CMakeLists.txt  README.md
simple_cpp_project/include/: lib1.hpp  lib2.hpp
simple_cpp_project/src/: example1.cpp  example2.cpp  lib1.cpp  lib2.cpp
simple_ros_node/: CMakeLists.txt  package.xml
simple_ros_node/include/simple_ros_node/: lib1.hpp
simple_ros_node/src/: lib1.cpp  simple_ros_node.cpp
